Fix error with not showing the indicators tooltip

--- a/frontend/src/styles/suggestionIndicator.css
+++ b/frontend/src/styles/suggestionIndicator.css
@@ -54,11 +54,4 @@
     font-family: sans-serif;
     font-size: 14px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    opacity: 0;
-    /*display: none;  Initially hidden */
-  }
-
-  .suggestion-indicator-tooltip:hover {
-    opacity: 1;
-    /*display: none;  Initially hidden */
   }
